@@ -98,6 +98,9 @@
 	Document how use of different preview macros affect classification of the
 	previewer.  Thanks to iambumblehead.
 
+	When processing multiple files in background, show current position in the
+	list on the job bar.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
